--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -10,5 +10,8 @@ $Light-grayish-blue: hsl(210, 46%, 95%);
 $Font-size-body: 13px;
 $Font-family: "Barlow Semi Condensed", sans-serif;
 // DIMENSIONS
-$Width-mobile: 375px;
-$Height-mobile: 2060px;
+$Width-mobile: 23.4375rem;
+$Height-mobile: 128.75rem;
+$Width-desktop: 61.25rem;
+$Height-desktop: 34.375rem;
+$Width-media: 83.125rem;
