--- a/styles copy.css
+++ b/styles copy.css
@@ -3,7 +3,6 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -58,19 +57,15 @@ body {
   padding: 1.75rem 0.875rem 1.75rem 1.75rem;
   border-radius: 0.5rem;
   margin: 0 auto;
-  background-image: url("./images/bg-pattern-quotation.svg");
+  background-image: url("../images/bg-pattern-quotation.svg");
   background-repeat: no-repeat;
   background-position-x: 93%;
   background-position-y: 1.25rem;
 }
 
 .article-violet .section-personal-data {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 1.0625rem;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin-bottom: 1.6875rem;
 }
@@ -112,8 +107,6 @@ body {
 
 @media (min-width: 83.125rem) {
   .article-violet {
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
     flex: 1;
     grid-column: 1/3;
     grid-row: 1;
@@ -123,7 +116,7 @@ body {
     padding: 1.75rem 0.875rem 1.75rem 1.75rem;
     border-radius: 0.5rem;
     margin: 0 auto;
-    background-image: url("./images/bg-pattern-quotation.svg");
+    background-image: url("../images/bg-pattern-quotation.svg");
     background-repeat: no-repeat;
     background-position-x: 83%;
     background-position-y: 0.0625rem;
@@ -132,12 +125,8 @@ body {
   }
 
   .article-violet .section-personal-data {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     gap: 1.0625rem;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     margin-bottom: 1.6875rem;
     font-size: 0.7em;
@@ -191,12 +180,8 @@ body {
 }
 
 .article-gray .section-personal-data {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 1.0625rem;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin-bottom: 1.6875rem;
 }
@@ -238,8 +223,6 @@ body {
 
 @media (min-width: 83.125rem) {
   .article-gray {
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
     flex: 1;
     grid-column: 3/4;
     grid-row: 1;
@@ -254,12 +237,8 @@ body {
   }
 
   .article-gray .section-personal-data {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     gap: 1.0625rem;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     margin-bottom: 1.6875rem;
     font-size: 0.7em;
@@ -313,12 +292,8 @@ body {
 }
 
 .article-white-1 .section-personal-data {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 1.0625rem;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin-bottom: 1.6875rem;
 }
@@ -360,8 +335,6 @@ body {
 
 @media (min-width: 83.125rem) {
   .article-white-1 {
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
     flex: 1;
     grid-column: 1/2;
     grid-row: 2;
@@ -376,12 +349,8 @@ body {
   }
 
   .article-white-1 .section-personal-data {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     gap: 1.0625rem;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     margin-bottom: 1.6875rem;
     font-size: 0.7em;
@@ -435,12 +404,8 @@ body {
 }
 
 .article-black .section-personal-data {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 1.0625rem;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin-bottom: 1.6875rem;
 }
@@ -482,8 +447,6 @@ body {
 
 @media (min-width: 83.125rem) {
   .article-black {
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
     flex: 1;
     grid-column: 2/4;
     grid-row: 2;
@@ -498,12 +461,8 @@ body {
   }
 
   .article-black .section-personal-data {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     gap: 1.0625rem;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     margin-bottom: 1.6875rem;
     font-size: 0.7em;
@@ -557,12 +516,8 @@ body {
 }
 
 .article-white-2 .section-personal-data {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 1.0625rem;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin-bottom: 1.6875rem;
 }
@@ -604,8 +559,6 @@ body {
 
 @media (min-width: 83.125rem) {
   .article-white-2 {
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
     flex: 1;
     grid-column: 2/3;
     grid-row: 1/2;
@@ -620,12 +573,8 @@ body {
   }
 
   .article-white-2 .section-personal-data {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     gap: 1.0625rem;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     margin-bottom: 1.6875rem;
     font-size: 0.7em;
@@ -668,3 +617,5 @@ body {
     opacity: 70%;
   }
 }
+
+/*# sourceMappingURL=styles.css.map */
